--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #3989c7;
 }
 
 a {
@@ -13,4 +14,13 @@ a {
 
 * {
   box-sizing: border-box;
+  
+}
+
+footer {
+  text-align: center;
+  padding: 30px 0;
+  background: black;
+  color: #eee;
+  font-size: 15px;
 }
