--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,9 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Shizuru&display=swap'); */
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: 'Shizuru',-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #3989c7;
 }
@@ -23,4 +24,20 @@ footer {
   background: black;
   color: #eee;
   font-size: 15px;
+  width: 100%;
+  
+}
+/* @keyframes myanimation{
+  0% {background-color : rgb(156, 0, 0);  border-radius : 0 0 0 0 ;t}
+   25% {background-color :violet;  border-radius : 50% 0 0 0 ;}
+    50% {background-color :orange;  border-radius : 50% 50% 0 0 ; }
+     75% {background-color :pink;  border-radius : 50% 50% 50% 0 ;}
+      100% {background-color : rgb(0, 0, 0);  border-radius : 50% 50% 50% 50%;}
+
+} */
+@keyframes myanimation{
+  0% { transform: rotateX(0deg);}
+  35% { transform: rotateX(30deg);}
+  70% { transform: rotateX(-30deg);}
+  100% { transform: rotateX(30deg);}
 }
