--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,7 +17,10 @@ a {
   box-sizing: border-box;
   
 }
-
+header {
+  width: 100%;
+  /* position:fixed; */
+}
 footer {
   text-align: center;
   padding: 30px 0;
@@ -27,14 +30,7 @@ footer {
   width: 100%;
   
 }
-/* @keyframes myanimation{
-  0% {background-color : rgb(156, 0, 0);  border-radius : 0 0 0 0 ;t}
-   25% {background-color :violet;  border-radius : 50% 0 0 0 ;}
-    50% {background-color :orange;  border-radius : 50% 50% 0 0 ; }
-     75% {background-color :pink;  border-radius : 50% 50% 50% 0 ;}
-      100% {background-color : rgb(0, 0, 0);  border-radius : 50% 50% 50% 50%;}
 
-} */
 @keyframes myanimation{
   0% { transform: rotateX(0deg);}
   35% { transform: rotateX(30deg);}
